<resources>
    <string name="app_name">Party Planner</string>
    <string name="aufgaben">To Do\'s</string>
    <string name="gaesteliste">Gästeliste</string>
    <string name="aufgaben_loeschen">Alle Aufgaben löschen</string>
    <string name="gaeste_loeschen">Alle Gäste löschen</string>
    <string name="gast_loeschen1">Möchtest du</string>
    <string name="gast_loeschen2">wirklich von der Gästeliste streichen?</string>
    <string name="ja">Ja</string>
    <string name="nein">Nein</string>
    <string name="alles_loeschen">Bist du dir sicher, dass du alles löschen möchtest?</string>
    <string name="alles_aufheben">Bist du dir sicher, dass du alle Markierungen aufheben möchtest?</string>
    <string name="gib_etwas_ein">Bitte gib etwas ein</string>
    <string name="gib_namen_der_aufgabe">Gib den Namen der Aufgabe ein</string>
    <string name="gib_namen_gast">Gib den Namen des Gastes ein</string>
    <string name="gib_details_aufgabe">Gib weitere Details ein \n(z.B. wer sie erledigen soll)</string>
    <string name="willst_du_beenden">Möchtest du wirklich beenden?</string>
    <string name="item_loeschen_1">Möchtest du \"</string>
    <string name="item_loeschen_2">\" wirklich löschen?</string>
    <string name="willst_du_aufgabe_loeschen">Möchtest du diese Aufgabe wirklich löschen?</string>
    <string name="speicher_fehler">Beim speichern ist etwas schief gelaufen. Es wurde nicht korrekt gespeichert.</string>
    <string name="namen_loeschen">Namen löschen</string>
    <string name="welches_loeschen">Tippe den Namen an, den du löschen möchtest</string>
    <string name="namen_hinzufuegen">Namen hinzufügen</string>
    <string name="kalender">Kalender</string>
    <string name="einkaufsliste">Shopping List</string>
    <string name="moechtest_du">Möchtest du</string>
    <string name="artikel_loeschen2">wirklich von der Einkaufsliste streichen?</string>
    <string name="alle_artikel_loeschen">Alle Artikel löschen</string>
    <string name="gib_artikel">Namen des Artikels eingeben</string>
    <string name="set_blockedEvent">Datum wurde als blockiert markiert!</string>
    <string name="set_freeEvent">Datum wurde als verfügbar markiert!</string>
    <string name="cleared_event">Markierung wurde aufgehoben!</string>
    <string name="cleared_all_events">Alle Markierungen aufgehoben!</string>
    <string name="choose_date">Bitte wähle ein Datum aus!</string>
    <string name="vielleicht">vielleicht</string>
    <string name="zusagen">Zusagen</string>
    <string name="absagen">Absagen</string>
    <string name="neutral">neutral</string>
    <string name="name_of_vote_option">Gib den Namen einer der Abstimmungsmöglichkeiten ein</string>
    <string name="vote_option">Name der Abstimmungsmöglichkeit</string>
    <string name="delete_all_votes">Alle Möglichkeiten löschen</string>
    <string name="delete_single_vote">Eine Möglichkeit löschen</string>
    <string name="somany_tasks_to_do">%1$s unerledigte Aufgaben übrig</string>
    <string name="all_tasks_done">Alle Aufgaben erledigt</string>
    <string name="somany_available_events">%1$s verfügbare Termine</string>
    <string name="somany_items_on_list">%1$s Artikel auf der Einkaufsliste</string>
    <string name="no_available_events">Keine verfügbaren Termine</string>
    <string name="no_items_on_shoppinglist">Keine Artikel auf der Einkaufsliste</string>
    <string name="no_guests_on_guestlist">Noch keine Gäste auf der Liste</string>
    <string name="somany_guests"></string>
    <string name="okay">Okay</string>
    <string name="wanna_rate">Hey, wir wissen, dass jeder diesen Dialog hasst. :D Die App ist allerdings noch in der Testphase
                                und deshalb ist uns Feedback besonders wichtig. Also wenn du irgendetwas zu sagen hast, einfach eine
                                Rezension auf Google Play schreiben und vielleicht können wir es mit dem nächsten Update umsetzen.\nVielen Dank!
                                \n- Dein Core Elements Team</string>

</resources>
