<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/aufgabenTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/aufgaben"
        android:theme="@style/TextStyleMainMenu" />

    <TextView
        android:id="@+id/guesteListeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aufgabenTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/gaesteliste"
        android:theme="@style/TextStyleMainMenu" />

    <TextView
        android:id="@+id/kalenderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/guesteListeTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/kalender"
        android:theme="@style/TextStyleMainMenu" />

    <TextView
        android:id="@+id/einkaufsListeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kalenderTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/einkaufsliste"
        android:theme="@style/TextStyleMainMenu" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="113dp"
        app:srcCompat="@color/colorAccent" />

</RelativeLayout>