<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGreyLight"
    android:padding="12dp">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/todoImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@android:color/white"
                android:cropToPadding="false"
                android:maxHeight="110dp"
                android:maxWidth="110dp"
                app:srcCompat="@drawable/ic_check_circle_white_48dp"
                tools:background="@color/colorBlack"/>

            <TextView
                android:id="@+id/todoTextView"
                style="@style/TextStyleMainMenu"
                android:background="@android:color/white"
                android:text="@string/aufgaben"/>

            <ImageView
                android:id="@+id/guestlistImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:background="@color/colorWhite"
                android:maxHeight="110dp"
                android:maxWidth="110dp"
                app:srcCompat="@drawable/ic_recent_actors_white_48dp"
                tools:background="@color/colorBlack"/>

            <TextView
                android:id="@+id/guestlistTextView"
                style="@style/TextStyleMainMenu"
                android:background="@color/colorWhite"
                android:text="@string/gaesteliste"/>

            <ImageView
                android:id="@+id/calendarImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:background="@color/colorWhite"
                android:maxHeight="110dp"
                android:maxWidth="110dp"
                app:srcCompat="@drawable/ic_event_white_48dp"
                tools:background="@color/colorBlack"/>

            <TextView
                android:id="@+id/calendarTextView"
                style="@style/TextStyleMainMenu"
                android:background="@color/colorWhite"
                android:text="@string/kalender"/>

            <ImageView
                android:id="@+id/shoppingImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:background="@color/colorWhite"
                android:maxHeight="110dp"
                android:maxWidth="110dp"
                app:srcCompat="@drawable/ic_local_grocery_store_white_48dp"
                tools:background="@color/colorBlack"/>

            <TextView
                android:id="@+id/shoppingTextView"
                style="@style/TextStyleMainMenu"
                android:background="@color/colorWhite"
                android:text="@string/einkaufsliste"/>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>