<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/todoImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="50dp"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_check_circle_white_48dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.2" />

    <ImageView
        android:id="@+id/guestListImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_recent_actors_white_48dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.8" />

    <ImageView
        android:id="@+id/calendarImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="75dp"
        app:layout_constraintTop_toBottomOf="@+id/todoImageView"
        app:srcCompat="@drawable/ic_event_white_48dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/todoImageView" />

    <ImageView
        android:id="@+id/shoppingImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="75dp"
        app:layout_constraintTop_toBottomOf="@+id/guestListImageView"
        app:srcCompat="@drawable/ic_local_grocery_store_white_48dp"
        tools:background="@color/colorPrimary"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/guestListImageView" />

    <TextView
        android:id="@+id/todoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/aufgaben"
        android:textColor="@color/colorWhiteTransparent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintLeft_toLeftOf="@+id/todoImageView"
        app:layout_constraintRight_toRightOf="@+id/todoImageView"
        app:layout_constraintTop_toBottomOf="@+id/todoImageView" />

    <TextView
        android:id="@+id/guestListTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gaesteliste"
        android:textColor="@color/colorWhiteTransparent"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/guestListImageView"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/guestListImageView"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/guestListImageView" />

    <TextView
        android:id="@+id/calendarTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/kalender"
        android:textColor="@color/colorWhiteTransparent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintLeft_toLeftOf="@+id/calendarImageView"
        app:layout_constraintRight_toRightOf="@+id/calendarImageView"
        app:layout_constraintTop_toBottomOf="@+id/calendarImageView" />

    <TextView
        android:id="@+id/shoppingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/einkaufsliste"
        android:textColor="@color/colorWhiteTransparent"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/shoppingImageView"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/shoppingImageView"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/shoppingImageView"
        app:layout_constraintHorizontal_bias="0.518" />

</android.support.constraint.ConstraintLayout>