<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="40"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/todoImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                app:srcCompat="@drawable/ic_check_circle_white_48dp" />

            <ImageView
                android:id="@+id/guestListImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_recent_actors_white_48dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="40"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/todoTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/aufgaben"
                android:textColor="@color/colorWhiteTransparent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/guestListTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/gaesteliste"
                android:textColor="@color/colorWhiteTransparent"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="40"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/calendarImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_event_white_48dp" />

            <ImageView
                android:id="@+id/shoppingImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_local_grocery_store_white_48dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="40"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/calendarTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/kalender"
                android:textColor="@color/colorWhiteTransparent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/shoppingTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/einkaufsliste"
                android:textColor="@color/colorWhiteTransparent"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>